--- a/backend/backend-pfe/package.json
+++ b/backend/backend-pfe/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "http": "^0.0.1-security",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
