--- a/front/package.json
+++ b/front/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.22.3",
+    "react-webcam": "^7.2.0",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
